# supercombo_accuracy_test

./: CMakeLists.txt  README.md  README_EN.md  build_android.sh  build_linux.sh  run.sh
install/rknn_app_demo_Linux/: rknn_app_demo  run.sh
install/rknn_app_demo_Linux/data/inputs/: in1.npy  in2.npy  in3.npy  in4.npy  in5.npy  in7.npy  in8.npy  inputs.npy
install/rknn_app_demo_Linux/data/outputs/golden/: outputs.npy
install/rknn_app_demo_Linux/data/outputs/runtime/: outputs.npy
libs/RV1106_1103/zlib/lib/pkgconfig/: zlib.pc
libs/resize_func/: resize_function.cc  resize_function.h
libs/utils/: data_utils.h  path_utils.h  rknn_app_dtype_cvt.h  rknn_app_layout_cvt.h  timer.h  type_half.h
src/: main.cc  rknn_app.cc  rknn_app.h
